@@ -5,6 +5,7 @@ Date: ????
     - Fixed dropping modules inside a crafting machine.
     - Fixed tile ghosts being left behind when pasting blueprints on space platforms.
     - Fixed duplication of item requests in exported blueprints, with requests in fuel inventories.
+    - Fixed that cryogenic plant mirroring was not saved.
   Gui:
     - Fixed missing label for "All" settings in updated settings entity UI.
 ---------------------------------------------------------------------------------------------------
